CVE-2022-0155 vulnerability has been fixed

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"deepai": "^1.0.17",
 		"express": "^4.17.1",
 		"iconv-lite": "^0.6.3",
-		"sha256": "^0.2.0"
+		"sha256": "^0.2.0",
+		"follow-redirects": ">=1.14.7"
 	}
 }
